--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="card_title_search_near">近くの銭湯を探す</string>
     <string name="card_title_select_by_map">地図から探す</string>
     <string name="card_title_status">ステータス</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
